--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,54 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{Chang2025CharacterizingPM,
+  title={Characterizing Pattern Matching and Its Limits on Compositional Task Structures},
+  author={Hoyeon Chang* and Jinho Park* and Hanseul Cho* and Sohee Yang and Miyoung Ko and Hyeonbin Hwang and Seungpil Won and Dohaeng Lee and Youbin Ahn and Minjoon Seo},
+  journal={arXiv Preprint 2025},
+  arxiv={2505.20278}
+}
+@article{hwang2025let,
+  title={Let's Predict Sentence by Sentence},
+  author={Hwang*, Hyeonbin and Jeon*, Byeongguk and Kim, Seungone and Kim, Jiyeon and Chang, Hoyeon and Yang, Sohee and Won, Seungpil and Lee, Dohaeng and Ahn, Youbin and Seo, Minjoon},
+  journal={arXiv Preprint 2025},
+  arxiv={2505.22202}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{
+chang2025dynamic,
+title={Dynamic VLM-Guided Negative Prompting for Diffusion Models},
+author={Hoyeon Chang* and Seungjin Kim* and Yoonseok Choi*},
+booktitle={NeurIPS 2025 Workshop on Generative and Protective AI for Content Creation},
+arxiv={2510.26052}
+}
+@inproceedings{
+lee2025how,
+title={How Does Vision-Language Adaptation Impact the Safety of Vision Language Models?},
+author={Seongyun Lee* and Geewook Kim* and Jiyeon Kim* and Hyunji Lee and Hoyeon Chang and Sue Hyun Park and Minjoon Seo},
+booktitle={ICLR 2025},
+url={https://openreview.net/forum?id=eXB5TCrAu9},
+arxiv={2410.07571}
+}
+@inproceedings{
+chang2024how,
+title={How Do Large Language Models Acquire Factual Knowledge During Pretraining?},
+author={Hoyeon Chang and Jinho Park and Seonghyeon Ye and Sohee Yang and Youngkyung Seo and Du-Seong Chang and Minjoon Seo},
+booktitle={NeurIPS 2024},
+url={https://openreview.net/forum?id=TYdzj1EvBP},
+arxiv={2406.11813}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{lee-etal-2023-nonparametric,
+    title = "Nonparametric Decoding for Generative Retrieval",
+    author = "Lee, Hyunji  and
+      Kim, JaeYoung  and
+      Chang, Hoyeon  and
+      Oh, Hanseok  and
+      Yang, Sohee  and
+      Karpukhin, Vladimir  and
+      Lu, Yi  and
+      Seo, Minjoon",
+    booktitle = "ACL 2023 Findings",
+    arxiv = {2210.02068}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
